8-load-balancing/istio-setup/destination-rule-loadbalancing-roundrobin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: least-conn-lb-wrapper
spec:
  host: istio-demo-wrapper
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
      #Round Robin policy. Default
